<resources>
    <string name="app_name">Proyecto_UF1</string>
    <string name="firma">by BertoSC</string>

    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="diario_felino">Diario Felino</string>
    <string name="tablon_felino">Tablón Felino</string>

    <string name="misgatos">Mis gatitos</string>
    <string name="gatitonombre">Nombre</string>
    <string name="gatitoedad">Edad</string>
    <string name="gatitoraza">Raza</string>
    <string name="gatitoalimentacion">Alimentación</string>
    <string name="gatitomed">Medicación</string>
    <string name="gatitovac">Vacunas</string>
    <string name="gatitocitas">Próximas citas</string>

    <string name="addperfil">Escribe los datos del gatito</string>

    <string name="add_titulo">Añade un título</string>
    <string name="text_post">Aquí escribe el texto</string>
    <string name="add_entrada">Escribe un nuevo post</string>
    <string name="select_img">Seleccionar Imagen</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="btn_editar">EDITAR</string>
    <string name="filtro_entrada">Busca una entrada</string>
    <string name="filtro_anuncios">Busca por localidad</string>
    <string name="tus_anuncios">Tus anuncios</string>
    <string name="add_anuncio">Escribe tu anuncio</string>
    <string name="localidad_anuncio">Indica la localidad</string>
    <string name="texto_anuncio">Escribe el texto</string>


    <string name="toastentrada">Por favor, introduce al menos un título y un texto</string>

    <string name="doctor_felino">Doctor Felino</string>
    <string name="add_doctor">Dime la edad de tu michi y te contaré cositas</string>
    <string name="edad">Edad en años</string>
    <string name="btn_edad">CONSEJOS </string>

    <string name="cachorro">¡Tu gato es un cachorro! \n\n En esta etapa, será travieso y juguetón y de momento es imposible prever su carácter posterior. \n\n

       Durante las primeras semanas de vida, puedes alimentarlo con una fórmula específica y, a partir de las cuatro semanas, introducir comida húmeda o croquetas especiales para gatitos, que son más fáciles de masticar.\n\n
       Con toda probabilidad, será muy cariñoso contigo, y necesitará un ambiente cálido para descansar y una caja de arena accesible.\n\n

        Es importante el proceso de desparasitación y también empezar a acostumbrarlo a que le examinen los dientes, las orejas o las garras.\n\n De esta manera, reducirás los problemas relacionados con esto en el futuro en las visitas al veterinario y en los checkeos rutinarios.\n\n

        A partir de los seis meses, deberías plantearte si lo vas a esterilizar, para prevenir problemas de salud y de comportamiento.
    </string>

    <string name="joven">

        ¡Tu gato está hecho un chaval! \n\n

        En esta etapa, entre 1 y 3 años, es joven, curioso y fuerte y alcanza un periodo de madurez general, tanto física como emocionalmente.\n\n
        Si no le has esterilizado, puede que empiece a comportarse de manera no deseada a partir de ahora. \n\n

        La alimentación habitual debe estar a base de pienso o comida húmeda adaptada a su rango de edad. Son animales rutinarios, por lo que se acostumbran muy fácil a un tipo de comida en específico.\n\n
        Pero no dudes en ir rotando el tipo de alimentación basada en carne, pescado o pollo y así ir descubriendo cuál es su favorita.\n\n

        Es territorial y le encanta explorar su entorno. Los principales problemas de salud pueden derivar de infecciones, parásitos u otros problemas causados durante sus aventuras, aunque depende mucho si es casero o si interactúa en el exterior.
        \n\n

        En este periodo, recibirá su primera vacuna de refuerzo, que le protegerá de algunas de las enfermedades infecciosas más comunes.
    </string>

    <string name="adulto">
        ¡Tu gato es adulto! \n\n

        A pesar de que no son tan activos como cuando eran cachorros, todavía les encanta jugar, cazar e interactuar contigo.\n\n

        Si no ha tenido complicaciones hasta ahora, este periodo suele ser tranquilo y sin problemas de importancia. \n\nSin embargo, es importante vigilar el peso de tu gato e ir controlando bien las raciones de comida. Muchas veces, los gatos esterilizados tienden a engordar,
        por lo que se recomienda introducir un pienso específico para ellos. La hidratación también es importante a medida que ganan años, por lo que cámbiale el agua a diario para que esté limpia y fresquita. \n\n

        También se deben realizar controles periódicos de los dientes, puesto que los problemas dentales son comunes en muchos gatos adultos, como inflamaciones o infecciones. \n\n

    </string>

    <string name="senior">
        ¡Tu gato es senior! \n\n

        En esta etapa, es muy común que los gatos cambien de un comportamiento más jugueton y cazador a otro más relajado y rutinario.\n\n
        No todos son iguales: muchos de ellos conservan el instito cazador y el juego como parte de su día a día, y otros prefieren descansar,
        disfrutar de la comodidad de su humano y una buena mantita \n\n

        A partir de aquí, es de suma importancia atender a cualquier cambio en su comportamiento o de su rutina, puesto que es muy común y probable el desarrollo de problemas dentales, renales, hepáticos y afecciones mucho más graves. \n\n
        También es conveniente examinarlo aprovechando las sesiones de mimos. En algunas ocasiones, pueden perder pelo y provocarse heridas a si mismos por lamidos excesivos debido al estrés o la ansiedad. \n\n

        La obesidad también suele alcanzar su punto máximo en esta etapa y es habitual adaptar de nuevo el pienso a este rango de edad. \n\n

        A partir de los 14 años, especialmente, los controles rutinarios son cada vez más importantes, además de una atención especial. Sin embargo, la mayoría de problemas son tratables y puedes garantizarle una buena calidad de vida.


    </string>

    <string name="toastFormatoNum">"Por favor, introduce un número válido"</string>
    <string name="toastCampoVacio">"Por favor, introduce la edad"</string>

    <string name="randomTitulo">Felino Random</string>
    <string name="randomTexto">Pulsa el botón para ver a un michi aleatorio</string>
    <string name="randomBoton">BUSCAR GATITO</string>
    <string name="errorAPI">UPS, hubo un michierror</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>