<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/diarioFragment"
            android:icon="@drawable/diaryicon"
            android:title="@string/diario_felino"
            app:showAsAction="always" >

        </item>

        <item
            android:id="@+id/doctorFragment"
            android:icon="@drawable/doctoricon"
            android:title="@string/doctor_felino"
            app:showAsAction="always" >

        </item>

        <item
            android:id="@+id/randomCatFragment"
            android:icon="@drawable/randomicon"
            android:title="@string/randomTitulo"
            app:showAsAction="always" >

        </item>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/cerrarsesion"
            android:title="@string/cerrar_sesion"
            app:showAsAction="always" >

        </item>

    </group>
</menu>