<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/rounded_background"
            android:layout_margin="40dp">


            <TextView
                android:id="@+id/add_anuncio_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_anuncio"
                android:fontFamily="@font/amaticregular"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center" />



            <EditText
                android:id="@+id/et_localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/localidad_anuncio"
                android:textSize="16sp"
                android:inputType="text" />


            <EditText
                android:id="@+id/et_texto_anuncio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/texto_anuncio"
                android:textSize="16sp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />


            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/amaticregular"
                android:text="@string/btn_guardar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/brown"
                android:textColor="@color/white"
                android:layout_margin="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>
