<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme">

    <!-- Contenedor desplazable -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/rounded_background"
            android:layout_margin="40dp">

            <!-- Título -->
            <TextView
                android:id="@+id/add_entrada_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_entrada"
                android:fontFamily="@font/amaticregular"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center" />


            <!-- Campo de entrada: Título -->
            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/add_titulo"
                android:textSize="16sp"
                android:inputType="text" />

            <!-- Campo de entrada: Texto -->
            <EditText
                android:id="@+id/et_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/text_post"
                android:textSize="16sp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />

            <!-- ImageView para mostrar la imagen seleccionada -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                />

            <!-- Botón para seleccionar una imagen -->
            <Button
                android:id="@+id/btn_seleccionar_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_img"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                />

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/amaticregular"
                android:text="@string/btn_guardar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/brown"
                android:textColor="@color/white"
                android:layout_margin="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Botón fijo en la parte inferior -->


</FrameLayout>
