<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/creme"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticregular"
            android:text="@string/tablon_felino"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:layout_gravity="center"
            android:textColor="@android:color/black" />


        <ImageView
            android:id="@+id/gato_tablon"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scaleType="fitCenter"
            android:layout_gravity="end"

            android:src="@drawable/tablonfelinoimagen" />

    </LinearLayout>

    <EditText
        android:id="@+id/etBuscarAnuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filtro_anuncios"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="8dp"
        />

    <Button
        android:id="@+id/btn_tus_anuncios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fontFamily="@font/amaticregular"
        android:text="@string/tus_anuncios"
        android:textSize="23sp"
        android:textStyle="bold"
        android:backgroundTint="@color/brown"
        android:textColor="@color/white"
        android:layout_margin="16dp" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAnuncios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconoAnadirAnuncio"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/iconopata"
            app:shapeAppearanceOverlay="@style/CircularShape"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>