
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/creme"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/fragment_title_randomCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticregular"
            android:text="@string/randomTitulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:layout_gravity="center"
            android:textColor="@android:color/black" />


        <ImageView
            android:id="@+id/gato_random_cabecera"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:paddingLeft="20dp"
            android:paddingRight="16dp"
            android:scaleType="fitCenter"
            android:layout_gravity="end"
            android:src="@drawable/randommichi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/random_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomTexto"
            android:fontFamily="@font/amaticregular"
            android:textSize="27sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

<!--
        <ImageView
            android:id="@+id/imagenRandom"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            />
-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenRandom"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/catBreedInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/josefinsanslight"
            />

        <Button
            android:id="@+id/btn_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/amaticregular"
            android:text="@string/randomBoton"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/brown"
            android:textColor="@color/white"
            android:layout_margin="16dp" />
    </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>